--- a/references.bib
+++ b/references.bib
@@ -657,3 +657,17 @@
 	date = {2023-10-27},
 	url = {http://dx.doi.org/10.1101/2023.10.24.562294}
 }
+
+@article{nguyen2024,
+	title = {Sequence modeling and design from molecular to genome scale with Evo},
+	author = {Nguyen, Eric and Poli, Michael and Durrant, Matthew G. and Kang, Brian and Katrekar, Dhruva and Li, David B. and Bartie, Liam J. and Thomas, Armin W. and King, Samuel H. and Brixi, Garyk and Sullivan, Jeremy and Ng, Madelena Y. and Lewis, Ashley and Lou, Aaron and Ermon, Stefano and Baccus, Stephen A. and Hernandez-Boussard, Tina and {Ré}, Christopher and Hsu, Patrick D. and Hie, Brian L.},
+	year = {2024},
+	month = {11},
+	date = {2024-11-15},
+	journal = {Science},
+	volume = {386},
+	number = {6723},
+	doi = {10.1126/science.ado9336},
+	url = {http://dx.doi.org/10.1126/science.ado9336},
+	langid = {en}
+}
