--- a/references.bib
+++ b/references.bib
@@ -671,3 +671,12 @@
 	url = {http://dx.doi.org/10.1126/science.ado9336},
 	langid = {en}
 }
+
+@misc{meier2021,
+	title = {Language models enable zero-shot prediction of the effects of mutations on protein function},
+	author = {Meier, Joshua and Rao, Roshan and Verkuil, Robert and Liu, Jason and Sercu, Tom and Rives, Alexander},
+	year = {2021},
+	month = {07},
+	date = {2021-07-10},
+	url = {http://dx.doi.org/10.1101/2021.07.09.450648}
+}
