--- a/Chapter6_DNA.qmd
+++ b/Chapter6_DNA.qmd
@@ -15,7 +15,7 @@ A second innovation was necessitated by the need to model long-range dependence 
 Below is a summary table of several prominent DNA language models with innovative architectures, along with links to their corresponding paper and GitHub (or related resource) repositories:
 
 | Model | Description | Paper Link | GitHub / Resource Link |
-|------------------|--------------------|------------------|------------------|
+|------------------|-------------------|------------------|------------------|
 | **DNABERT** | A transformer-based model that learns bidirectional representations from DNA sequences using k-mer tokenization. | [DNABERT Paper](https://doi.org/10.1093/bioinformatics/btab083) | [GitHub](https://github.com/jerryji1993/DNABERT) |
 | **Nucleotide Transformer (NT‑v2)** | A large transformer pretrained on massive human genomic data to learn robust DNA representations for various downstream tasks. | [Nucleotide Transformer v2](https://doi.org/10.1038/s41592-024-02523-z) | [GitHub](https://github.com/instadeepai/nucleotide-transformer)/[HuggingFace](https://huggingface.co/collections/InstaDeepAI/nucleotide-transformer-65099cdde13ff96230f2e592) |
 | **GPN** | The Genomic Pre-trained Network that leverages unsupervised DNA language modeling to predict genome-wide variant effects. | [GPN Paper (PNAS 2023)](https://doi.org/10.1073/pnas.2311219120) | [GitHub](https://github.com/songlab-cal/gpn) |
@@ -24,6 +24,7 @@ Below is a summary table of several prominent DNA language models with innovativ
 | **HybriDNA** | A hybrid model combining Transformer and Mamba2 (state-space) architectures for efficient long-range DNA modeling. | [HybriDNA (arXiv)](https://arxiv.org/abs/2502.10807) |  |
 | **Omni‑DNA** | A unified genomic foundation model that supports cross-modal and multi-task learning across a wide range of genomic applications. | [Omni‑DNA (arXiv)](https://arxiv.org/abs/2502.03499) | [Hugging Face Collection](https://huggingface.co/collections/zehui127) |
 | **GENERator** | A long-context generative genomic foundation model designed for sequence generation and optimization tasks with a context length of up to 98k bp. | [GENERator (arXiv)](https://arxiv.org/abs/2502.07272) | [GitHub](https://github.com/GenerTeam/GENERator) |
+| **Evo 2** | Evo 2 is a state of the art DNA language model (avaialble in 1B, 7B and 40B sizes) for long context modeling and design. Evo 2 models DNA sequences at single-nucleotide resolution at up to 1 million base pair context length using the [StripedHyena 2](https://github.com/Zymrael/savanna/blob/main/paper.pdf)architecture. Evo 2 was pretrained using [Savanna](https://github.com/Zymrael/savanna). Evo 2 was trained autoregressively on [OpenGenome2](https://huggingface.co/datasets/arcinstitute/opengenome2), a dataset containing 8.8 trillion tokens from all domains of life. | [Preprint](https://www.biorxiv.org/content/10.1101/2025.02.18.638918v1) | [Github](https://github.com/arcinstitute/evo2) [Hugging Face collection](https://huggingface.co/arcinstitute) |
 
 This table highlights each model’s core features and provides direct access to the publication and code repository (or resource page) where available.
 
@@ -37,4 +38,4 @@ There are some interesting immediate challenges that become apparent form the li
 
 one specific avenue for exploration could therefore be to deeply consider the order in which training data is presented (first train across species, then train within humans) and the effect of learning rate on specific segments of training. YOu could imagine training at a high learning rate using the high variance intra-species data and then train at a lower learning rate with the low variance sequences, only modestly updating the model in that phase. Alternatively you could consider "low rank training", where the model is first trained on multi-species data and then only fine-tuned on human data, restricting the degrees of freedom in that second phase trough low rank matrix approximation (LoRa)[@hu2021] which learns less, but also forgets less from previous training epochs[@biderman2024].
 
-In any field that receives outsized attention (and I feel we can conclude AI is currently such a field) its always critical to **evaluate** innovations. There is a growing literature around DNA language model evaluation you should familiarize yourself with if you are going to evaluate these models for academic or industry use [@Tang2024; @patel2024; @marin2023]. For specific tasks its good to continually evaluate whether DNA language models are overkill. Does your model outperform alpha-missense, for which the scores are already available? How does it fair against older, and computationally likely lighter, supervised models like CADD[@schubach2024]? Don't just trust the original authors, they are biased (we all are) consider independent evaluations, like for example: [@ljungdahl2023]. 
+In any field that receives outsized attention (and I feel we can conclude AI is currently such a field) its always critical to **evaluate** innovations. There is a growing literature around DNA language model evaluation you should familiarize yourself with if you are going to evaluate these models for academic or industry use [@Tang2024; @patel2024; @marin2023]. For specific tasks its good to continually evaluate whether DNA language models are overkill. Does your model outperform alpha-missense, for which the scores are already available? How does it fair against older, and computationally likely lighter, supervised models like CADD[@schubach2024]? Don't just trust the original authors, they are biased (we all are) consider independent evaluations, like for example: [@ljungdahl2023].
