--- a/references.bib
+++ b/references.bib
@@ -680,3 +680,26 @@
 	date = {2021-07-10},
 	url = {http://dx.doi.org/10.1101/2021.07.09.450648}
 }
+
+@misc{hassan2025,
+	title = {Life as a Function: Why Transformer Architectures Struggle to Gain Genome-Level Foundational Capabilities},
+	author = {Hassan, Hassan and Puhger, Kyle and Saadat, Ali and Mayer, Johannes and Sprang, Maximilian},
+	year = {2025},
+	month = {01},
+	date = {2025-01-14},
+	url = {http://dx.doi.org/10.1101/2025.01.13.632745}
+}
+
+@article{consens2025,
+	title = {Genomic language models could transform medicine but not yet},
+	author = {Consens, Micaela Elisa and Li, Ben and Poetsch, Anna R. and Gilbert, Stephen},
+	year = {2025},
+	month = {04},
+	date = {2025-04-18},
+	journal = {npj Digital Medicine},
+	volume = {8},
+	number = {1},
+	doi = {10.1038/s41746-025-01603-4},
+	url = {http://dx.doi.org/10.1038/s41746-025-01603-4},
+	langid = {en}
+}
